backend/Parser/ParLogic.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.5 from ParLogic.y
-----------------------------------------------------------------------------

state 75 contains 3 shift/reduce conflicts.
state 87 contains 3 shift/reduce conflicts.
state 88 contains 3 shift/reduce conflicts.
state 90 contains 3 shift/reduce conflicts.
state 94 contains 3 shift/reduce conflicts.
state 95 contains 3 shift/reduce conflicts.

rule 18 is unused

terminal L_PredId is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pSequent -> Sequent                         (0)
	%start_pStep -> Step                               (1)
	%start_pListStep -> ListStep                       (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pForm4 -> Form4                             (5)
	%start_pForm3 -> Form3                             (6)
	%start_pForm2 -> Form2                             (7)
	%start_pForm1 -> Form1                             (8)
	%start_pForm -> Form                               (9)
	%start_pListForm -> ListForm                       (10)
	%start_pPred -> Pred                               (11)
	%start_pVar -> Var                                 (12)
	%start_pFun -> Fun                                 (13)
	%start_pTerm -> Term                               (14)
	%start_pListTerm -> ListTerm                       (15)
	Ident -> L_Ident                                   (16)
	ArgId -> L_ArgId                                   (17)
	PredId -> L_PredId                                 (18)
	VarId -> L_VarId                                   (19)
	Sequent -> 'if' ListForm '|-' Form ';' ListStep    (20)
	Step -> Form ':' 'Prem' ';'                        (21)
	Step -> Var ':' 'Assumed' ';'                      (22)
	Step -> Form ':' 'Assumed' ';'                     (23)
	Step -> '{' ListStep '}' ';'                       (24)
	Step -> Form ':' Ident '(' ListArg ')' ';'         (25)
	ListStep ->                                        (26)
	ListStep -> Step ListStep                          (27)
	Arg -> ArgId                                       (28)
	ListArg ->                                         (29)
	ListArg -> Arg                                     (30)
	ListArg -> Arg ',' ListArg                         (31)
	Form4 -> 'bot'                                     (32)
	Form4 -> Term '=' Term                             (33)
	Form4 -> '(' Form ')'                              (34)
	Form3 -> 'all' Var Form                            (35)
	Form3 -> 'some' Var Form                           (36)
	Form3 -> '!' Form                                  (37)
	Form3 -> Form4                                     (38)
	Form2 -> Form '&' Form                             (39)
	Form2 -> Form '|' Form                             (40)
	Form2 -> Form3                                     (41)
	Form1 -> Form '->' Form                            (42)
	Form1 -> Form2                                     (43)
	Form -> Pred                                       (44)
	Form -> Form1                                      (45)
	ListForm ->                                        (46)
	ListForm -> Form                                   (47)
	ListForm -> Form ',' ListForm                      (48)
	Pred -> Ident '(' ListTerm ')'                     (49)
	Pred -> Ident                                      (50)
	Var -> VarId                                       (51)
	Fun -> VarId '(' ListTerm ')'                      (52)
	Term -> Var                                        (53)
	Term -> Fun                                        (54)
	ListTerm ->                                        (55)
	ListTerm -> Term                                   (56)
	ListTerm -> Term ',' ListTerm                      (57)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'&'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'->'           { PT _ (TS _ 6) }
	':'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'='            { PT _ (TS _ 9) }
	'Assumed'      { PT _ (TS _ 10) }
	'Prem'         { PT _ (TS _ 11) }
	'all'          { PT _ (TS _ 12) }
	'bot'          { PT _ (TS _ 13) }
	'if'           { PT _ (TS _ 14) }
	'some'         { PT _ (TS _ 15) }
	'{'            { PT _ (TS _ 16) }
	'|'            { PT _ (TS _ 17) }
	'|-'           { PT _ (TS _ 18) }
	'}'            { PT _ (TS _ 19) }
	L_Ident        { PT _ (TV $$) }
	L_ArgId        { PT _ (T_ArgId $$) }
	L_PredId       { PT _ (T_PredId $$) }
	L_VarId        { PT _ (T_VarId $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pSequent rule  0
	%start_pStep    rule  1
	%start_pListStep rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pForm4   rule  5
	%start_pForm3   rule  6
	%start_pForm2   rule  7
	%start_pForm1   rule  8
	%start_pForm    rule  9
	%start_pListForm rule  10
	%start_pPred    rule  11
	%start_pVar     rule  12
	%start_pFun     rule  13
	%start_pTerm    rule  14
	%start_pListTerm rule  15
	Ident           rule  16
	ArgId           rule  17
	PredId          rule  18
	VarId           rule  19
	Sequent         rule  20
	Step            rules 21, 22, 23, 24, 25
	ListStep        rules 26, 27
	Arg             rule  28
	ListArg         rules 29, 30, 31
	Form4           rules 32, 33, 34
	Form3           rules 35, 36, 37, 38
	Form2           rules 39, 40, 41
	Form1           rules 42, 43
	Form            rules 44, 45
	ListForm        rules 46, 47, 48
	Pred            rules 49, 50
	Var             rule  51
	Fun             rule  52
	Term            rules 53, 54
	ListTerm        rules 55, 56, 57

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pSequent -> . Sequent                        (rule 0)

	'if'           shift, and enter state 62

	Sequent        goto state 61

State 1

	%start_pStep -> . Step                              (rule 1)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	'{'            shift, and enter state 59
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Step           goto state 60
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 57
	Pred           goto state 37
	Var            goto state 58
	Fun            goto state 20
	Term           goto state 38

State 2

	%start_pListStep -> . ListStep                      (rule 2)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	'{'            shift, and enter state 59
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23
	%eof           reduce using rule 26

	Ident          goto state 29
	VarId          goto state 18
	Step           goto state 55
	ListStep       goto state 56
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 57
	Pred           goto state 37
	Var            goto state 58
	Fun            goto state 20
	Term           goto state 38

State 3

	%start_pArg -> . Arg                                (rule 3)

	L_ArgId        shift, and enter state 53

	ArgId          goto state 50
	Arg            goto state 54

State 4

	%start_pListArg -> . ListArg                        (rule 4)

	L_ArgId        shift, and enter state 53
	%eof           reduce using rule 29

	ArgId          goto state 50
	Arg            goto state 51
	ListArg        goto state 52

State 5

	%start_pForm4 -> . Form4                            (rule 5)

	'('            shift, and enter state 40
	'bot'          shift, and enter state 42
	L_VarId        shift, and enter state 23

	VarId          goto state 18
	Form4          goto state 49
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 6

	%start_pForm3 -> . Form3                            (rule 6)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_VarId        shift, and enter state 23

	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 48
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 7

	%start_pForm2 -> . Form2                            (rule 7)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 47
	Form1          goto state 34
	Form           goto state 46
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 8

	%start_pForm1 -> . Form1                            (rule 8)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 45
	Form           goto state 46
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 9

	%start_pForm -> . Form                              (rule 9)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 44
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 10

	%start_pListForm -> . ListForm                      (rule 10)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23
	%eof           reduce using rule 46

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 35
	ListForm       goto state 36
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 11

	%start_pPred -> . Pred                              (rule 11)

	L_Ident        shift, and enter state 17

	Ident          goto state 29
	Pred           goto state 30

State 12

	%start_pVar -> . Var                                (rule 12)

	L_VarId        shift, and enter state 23

	VarId          goto state 27
	Var            goto state 28

State 13

	%start_pFun -> . Fun                                (rule 13)

	L_VarId        shift, and enter state 23

	VarId          goto state 25
	Fun            goto state 26

State 14

	%start_pTerm -> . Term                              (rule 14)

	L_VarId        shift, and enter state 23

	VarId          goto state 18
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 24

State 15

	%start_pListTerm -> . ListTerm                      (rule 15)

	L_VarId        shift, and enter state 23
	%eof           reduce using rule 55

	VarId          goto state 18
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 21
	ListTerm       goto state 22

State 16

	Ident -> . L_Ident                                  (rule 16)

	L_Ident        shift, and enter state 17


State 17

	Ident -> L_Ident .                                  (rule 16)

	'&'            reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	','            reduce using rule 16
	'->'           reduce using rule 16
	':'            reduce using rule 16
	';'            reduce using rule 16
	'|'            reduce using rule 16
	'|-'           reduce using rule 16
	%eof           reduce using rule 16


State 18

	Var -> VarId .                                      (rule 51)
	Fun -> VarId . '(' ListTerm ')'                     (rule 52)

	'&'            reduce using rule 51
	'('            shift, and enter state 79
	')'            reduce using rule 51
	','            reduce using rule 51
	'->'           reduce using rule 51
	':'            reduce using rule 51
	';'            reduce using rule 51
	'='            reduce using rule 51
	'|'            reduce using rule 51
	'|-'           reduce using rule 51
	%eof           reduce using rule 51


State 19

	Term -> Var .                                       (rule 53)

	'&'            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	'->'           reduce using rule 53
	':'            reduce using rule 53
	';'            reduce using rule 53
	'='            reduce using rule 53
	'|'            reduce using rule 53
	'|-'           reduce using rule 53
	%eof           reduce using rule 53


State 20

	Term -> Fun .                                       (rule 54)

	'&'            reduce using rule 54
	')'            reduce using rule 54
	','            reduce using rule 54
	'->'           reduce using rule 54
	':'            reduce using rule 54
	';'            reduce using rule 54
	'='            reduce using rule 54
	'|'            reduce using rule 54
	'|-'           reduce using rule 54
	%eof           reduce using rule 54


State 21

	ListTerm -> Term .                                  (rule 56)
	ListTerm -> Term . ',' ListTerm                     (rule 57)

	')'            reduce using rule 56
	','            shift, and enter state 80
	%eof           reduce using rule 56


State 22

	%start_pListTerm -> ListTerm .                      (rule 15)

	%eof           accept


State 23

	VarId -> L_VarId .                                  (rule 19)

	'!'            reduce using rule 19
	'&'            reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	','            reduce using rule 19
	'->'           reduce using rule 19
	':'            reduce using rule 19
	';'            reduce using rule 19
	'='            reduce using rule 19
	'all'          reduce using rule 19
	'bot'          reduce using rule 19
	'some'         reduce using rule 19
	'|'            reduce using rule 19
	'|-'           reduce using rule 19
	L_Ident        reduce using rule 19
	L_VarId        reduce using rule 19
	%eof           reduce using rule 19


State 24

	%start_pTerm -> Term .                              (rule 14)

	%eof           accept


State 25

	Fun -> VarId . '(' ListTerm ')'                     (rule 52)

	'('            shift, and enter state 79


State 26

	%start_pFun -> Fun .                                (rule 13)

	%eof           accept


State 27

	Var -> VarId .                                      (rule 51)

	'!'            reduce using rule 51
	'('            reduce using rule 51
	'all'          reduce using rule 51
	'bot'          reduce using rule 51
	'some'         reduce using rule 51
	L_Ident        reduce using rule 51
	L_VarId        reduce using rule 51
	%eof           reduce using rule 51


State 28

	%start_pVar -> Var .                                (rule 12)

	%eof           accept


State 29

	Pred -> Ident . '(' ListTerm ')'                    (rule 49)
	Pred -> Ident .                                     (rule 50)

	'&'            reduce using rule 50
	'('            shift, and enter state 78
	')'            reduce using rule 50
	','            reduce using rule 50
	'->'           reduce using rule 50
	':'            reduce using rule 50
	';'            reduce using rule 50
	'|'            reduce using rule 50
	'|-'           reduce using rule 50
	%eof           reduce using rule 50


State 30

	%start_pPred -> Pred .                              (rule 11)

	%eof           accept


State 31

	Form3 -> Form4 .                                    (rule 38)

	'&'            reduce using rule 38
	')'            reduce using rule 38
	','            reduce using rule 38
	'->'           reduce using rule 38
	':'            reduce using rule 38
	';'            reduce using rule 38
	'|'            reduce using rule 38
	'|-'           reduce using rule 38
	%eof           reduce using rule 38


State 32

	Form2 -> Form3 .                                    (rule 41)

	'&'            reduce using rule 41
	')'            reduce using rule 41
	','            reduce using rule 41
	'->'           reduce using rule 41
	':'            reduce using rule 41
	';'            reduce using rule 41
	'|'            reduce using rule 41
	'|-'           reduce using rule 41
	%eof           reduce using rule 41


State 33

	Form1 -> Form2 .                                    (rule 43)

	'&'            reduce using rule 43
	')'            reduce using rule 43
	','            reduce using rule 43
	'->'           reduce using rule 43
	':'            reduce using rule 43
	';'            reduce using rule 43
	'|'            reduce using rule 43
	'|-'           reduce using rule 43
	%eof           reduce using rule 43


State 34

	Form -> Form1 .                                     (rule 45)

	'&'            reduce using rule 45
	')'            reduce using rule 45
	','            reduce using rule 45
	'->'           reduce using rule 45
	':'            reduce using rule 45
	';'            reduce using rule 45
	'|'            reduce using rule 45
	'|-'           reduce using rule 45
	%eof           reduce using rule 45


State 35

	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)
	ListForm -> Form .                                  (rule 47)
	ListForm -> Form . ',' ListForm                     (rule 48)

	'&'            shift, and enter state 66
	','            shift, and enter state 77
	'->'           shift, and enter state 67
	'|'            shift, and enter state 69
	'|-'           reduce using rule 47
	%eof           reduce using rule 47


State 36

	%start_pListForm -> ListForm .                      (rule 10)

	%eof           accept


State 37

	Form -> Pred .                                      (rule 44)

	'&'            reduce using rule 44
	')'            reduce using rule 44
	','            reduce using rule 44
	'->'           reduce using rule 44
	':'            reduce using rule 44
	';'            reduce using rule 44
	'|'            reduce using rule 44
	'|-'           reduce using rule 44
	%eof           reduce using rule 44


State 38

	Form4 -> Term . '=' Term                            (rule 33)

	'='            shift, and enter state 76


State 39

	Form3 -> '!' . Form                                 (rule 37)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 75
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 40

	Form4 -> '(' . Form ')'                             (rule 34)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 74
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 41

	Form3 -> 'all' . Var Form                           (rule 35)

	L_VarId        shift, and enter state 23

	VarId          goto state 27
	Var            goto state 73

State 42

	Form4 -> 'bot' .                                    (rule 32)

	'&'            reduce using rule 32
	')'            reduce using rule 32
	','            reduce using rule 32
	'->'           reduce using rule 32
	':'            reduce using rule 32
	';'            reduce using rule 32
	'|'            reduce using rule 32
	'|-'           reduce using rule 32
	%eof           reduce using rule 32


State 43

	Form3 -> 'some' . Var Form                          (rule 36)

	L_VarId        shift, and enter state 23

	VarId          goto state 27
	Var            goto state 72

State 44

	%start_pForm -> Form .                              (rule 9)
	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
	'->'           shift, and enter state 67
	'|'            shift, and enter state 69
	%eof           accept


State 45

	%start_pForm1 -> Form1 .                            (rule 8)
	Form -> Form1 .                                     (rule 45)

	'&'            reduce using rule 45
	'->'           reduce using rule 45
	'|'            reduce using rule 45
	%eof           accept


State 46

	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
	'->'           shift, and enter state 67
	'|'            shift, and enter state 69


State 47

	%start_pForm2 -> Form2 .                            (rule 7)
	Form1 -> Form2 .                                    (rule 43)

	'&'            reduce using rule 43
	'->'           reduce using rule 43
	'|'            reduce using rule 43
	%eof           accept


State 48

	%start_pForm3 -> Form3 .                            (rule 6)

	%eof           accept


State 49

	%start_pForm4 -> Form4 .                            (rule 5)

	%eof           accept


State 50

	Arg -> ArgId .                                      (rule 28)

	')'            reduce using rule 28
	','            reduce using rule 28
	%eof           reduce using rule 28


State 51

	ListArg -> Arg .                                    (rule 30)
	ListArg -> Arg . ',' ListArg                        (rule 31)

	')'            reduce using rule 30
	','            shift, and enter state 71
	%eof           reduce using rule 30


State 52

	%start_pListArg -> ListArg .                        (rule 4)

	%eof           accept


State 53

	ArgId -> L_ArgId .                                  (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	%eof           reduce using rule 17


State 54

	%start_pArg -> Arg .                                (rule 3)

	%eof           accept


State 55

	ListStep -> Step . ListStep                         (rule 27)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	'{'            shift, and enter state 59
	'}'            reduce using rule 26
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23
	%eof           reduce using rule 26

	Ident          goto state 29
	VarId          goto state 18
	Step           goto state 55
	ListStep       goto state 70
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 57
	Pred           goto state 37
	Var            goto state 58
	Fun            goto state 20
	Term           goto state 38

State 56

	%start_pListStep -> ListStep .                      (rule 2)

	%eof           accept


State 57

	Step -> Form . ':' 'Prem' ';'                       (rule 21)
	Step -> Form . ':' 'Assumed' ';'                    (rule 23)
	Step -> Form . ':' Ident '(' ListArg ')' ';'        (rule 25)
	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
	'->'           shift, and enter state 67
	':'            shift, and enter state 68
	'|'            shift, and enter state 69


State 58

	Step -> Var . ':' 'Assumed' ';'                     (rule 22)
	Term -> Var .                                       (rule 53)

	':'            shift, and enter state 65
	'='            reduce using rule 53


State 59

	Step -> '{' . ListStep '}' ';'                      (rule 24)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	'{'            shift, and enter state 59
	'}'            reduce using rule 26
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Step           goto state 55
	ListStep       goto state 64
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 57
	Pred           goto state 37
	Var            goto state 58
	Fun            goto state 20
	Term           goto state 38

State 60

	%start_pStep -> Step .                              (rule 1)

	%eof           accept


State 61

	%start_pSequent -> Sequent .                        (rule 0)

	%eof           accept


State 62

	Sequent -> 'if' . ListForm '|-' Form ';' ListStep    (rule 20)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	'|-'           reduce using rule 46
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 35
	ListForm       goto state 63
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 63

	Sequent -> 'if' ListForm . '|-' Form ';' ListStep    (rule 20)

	'|-'           shift, and enter state 98


State 64

	Step -> '{' ListStep . '}' ';'                      (rule 24)

	'}'            shift, and enter state 97


State 65

	Step -> Var ':' . 'Assumed' ';'                     (rule 22)

	'Assumed'      shift, and enter state 96


State 66

	Form2 -> Form '&' . Form                            (rule 39)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 95
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 67

	Form1 -> Form '->' . Form                           (rule 42)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 94
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 68

	Step -> Form ':' . 'Prem' ';'                       (rule 21)
	Step -> Form ':' . 'Assumed' ';'                    (rule 23)
	Step -> Form ':' . Ident '(' ListArg ')' ';'        (rule 25)

	'Assumed'      shift, and enter state 92
	'Prem'         shift, and enter state 93
	L_Ident        shift, and enter state 17

	Ident          goto state 91

State 69

	Form2 -> Form '|' . Form                            (rule 40)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 90
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 70

	ListStep -> Step ListStep .                         (rule 27)

	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 71

	ListArg -> Arg ',' . ListArg                        (rule 31)

	')'            reduce using rule 29
	L_ArgId        shift, and enter state 53
	%eof           reduce using rule 29

	ArgId          goto state 50
	Arg            goto state 51
	ListArg        goto state 89

State 72

	Form3 -> 'some' Var . Form                          (rule 36)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 88
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 73

	Form3 -> 'all' Var . Form                           (rule 35)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 87
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 74

	Form4 -> '(' Form . ')'                             (rule 34)
	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
	')'            shift, and enter state 86
	'->'           shift, and enter state 67
	'|'            shift, and enter state 69


State 75

	Form3 -> '!' Form .                                 (rule 37)
	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
			(reduce using rule 37)

	')'            reduce using rule 37
	','            reduce using rule 37
	'->'           shift, and enter state 67
			(reduce using rule 37)

	':'            reduce using rule 37
	';'            reduce using rule 37
	'|'            shift, and enter state 69
			(reduce using rule 37)

	'|-'           reduce using rule 37
	%eof           reduce using rule 37


State 76

	Form4 -> Term '=' . Term                            (rule 33)

	L_VarId        shift, and enter state 23

	VarId          goto state 18
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 85

State 77

	ListForm -> Form ',' . ListForm                     (rule 48)

	'!'            shift, and enter state 39
	'('            shift, and enter state 40
	'all'          shift, and enter state 41
	'bot'          shift, and enter state 42
	'some'         shift, and enter state 43
	'|-'           reduce using rule 46
	L_Ident        shift, and enter state 17
	L_VarId        shift, and enter state 23
	%eof           reduce using rule 46

	Ident          goto state 29
	VarId          goto state 18
	Form4          goto state 31
	Form3          goto state 32
	Form2          goto state 33
	Form1          goto state 34
	Form           goto state 35
	ListForm       goto state 84
	Pred           goto state 37
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 38

State 78

	Pred -> Ident '(' . ListTerm ')'                    (rule 49)

	')'            reduce using rule 55
	L_VarId        shift, and enter state 23

	VarId          goto state 18
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 21
	ListTerm       goto state 83

State 79

	Fun -> VarId '(' . ListTerm ')'                     (rule 52)

	')'            reduce using rule 55
	L_VarId        shift, and enter state 23

	VarId          goto state 18
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 21
	ListTerm       goto state 82

State 80

	ListTerm -> Term ',' . ListTerm                     (rule 57)

	')'            reduce using rule 55
	L_VarId        shift, and enter state 23
	%eof           reduce using rule 55

	VarId          goto state 18
	Var            goto state 19
	Fun            goto state 20
	Term           goto state 21
	ListTerm       goto state 81

State 81

	ListTerm -> Term ',' ListTerm .                     (rule 57)

	')'            reduce using rule 57
	%eof           reduce using rule 57


State 82

	Fun -> VarId '(' ListTerm . ')'                     (rule 52)

	')'            shift, and enter state 106


State 83

	Pred -> Ident '(' ListTerm . ')'                    (rule 49)

	')'            shift, and enter state 105


State 84

	ListForm -> Form ',' ListForm .                     (rule 48)

	'|-'           reduce using rule 48
	%eof           reduce using rule 48


State 85

	Form4 -> Term '=' Term .                            (rule 33)

	'&'            reduce using rule 33
	')'            reduce using rule 33
	','            reduce using rule 33
	'->'           reduce using rule 33
	':'            reduce using rule 33
	';'            reduce using rule 33
	'|'            reduce using rule 33
	'|-'           reduce using rule 33
	%eof           reduce using rule 33


State 86

	Form4 -> '(' Form ')' .                             (rule 34)

	'&'            reduce using rule 34
	')'            reduce using rule 34
	','            reduce using rule 34
	'->'           reduce using rule 34
	':'            reduce using rule 34
	';'            reduce using rule 34
	'|'            reduce using rule 34
	'|-'           reduce using rule 34
	%eof           reduce using rule 34


State 87

	Form3 -> 'all' Var Form .                           (rule 35)
	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
			(reduce using rule 35)

	')'            reduce using rule 35
	','            reduce using rule 35
	'->'           shift, and enter state 67
			(reduce using rule 35)

	':'            reduce using rule 35
	';'            reduce using rule 35
	'|'            shift, and enter state 69
			(reduce using rule 35)

	'|-'           reduce using rule 35
	%eof           reduce using rule 35


State 88

	Form3 -> 'some' Var Form .                          (rule 36)
	Form2 -> Form . '&' Form                            (rule 39)
	Form2 -> Form . '|' Form                            (rule 40)
	Form1 -> Form . '->' Form                           (rule 42)

	'&'            shift, and enter state 66
			(reduce using rule 36)

	')'            reduce using rule 36
	','            reduce using rule 36
	'->'           shift, and enter state 67
			(reduce using rule 36)

	':'            reduce using rule 36
	';'            reduce using rule 36
	'|'            shift, and enter state 69
			(reduce using rule 36)

	'|-'           reduce using rule 36
	%eof           reduce using rule 36

